# pretix-authorize.net

./: .gitlab-ci.yml  .update-locales.sh  MANIFEST.in  Makefile  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: style.yml  tests.yml
pretix_authorizenet/: __init__.py  apps.py  models.py  payment.py  signals.py  urls.py  views.py
pretix_authorizenet/migrations/: 0001_initial.py
pretix_authorizenet/static/pretix_authorizenet/: pretix-authorizenet.css  pretix-authorizenet.js
pretix_authorizenet/templates/pretix_authorizenet/: checkout_payment_confirm.html  checkout_payment_form.html  control.html  pending.html  presale_head.html
